--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,5 @@
-@mixin shadow() {
-  -webkit-box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.75);
-}
+@import "../../scss/colors";
+@import "../../scss/mixins";
 
 .promo-container {
   padding: 200px;
@@ -15,11 +12,20 @@
 .menu-container {
   width: 30rem;
   height: 50rem;
-  background-color: rgba($color: rgb(19, 19, 19), $alpha: .8);
-  color: rgb(139, 139, 139);
-  @include shadow();
+  @include box_shadow(20px, 10px, black);
+  background-color: rgba($color: $color-dark, $alpha: .8);
   border-style: solid;
-  border-color: rgba($color: rgb(43, 43, 43), $alpha: .8);
+  border-color: rgba($color: $color-primary, $alpha: .8);
   border-width: 1px;
   padding: 40px;
+  .title {
+    font-size: 4em;
+    font-weight: 900;
+    padding-left: 0px;
+    margin-bottom: 60px;
+    font-family: 'Indie Flower', cursive;
+  }
+  mat-form-field {
+    width: 100%;
+  }
 }
