added basic login, working on navbar

--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,7 +1,15 @@
+@import "colors";
+
 @mixin box_shadow($blur, $spread, $color) {
   -webkit-box-shadow: 0px 0px $blur $spread rgba($color,.8);
   -moz-box-shadow: 0px 0px $blur $spread rgba($color,.8);
   box-shadow: 0px 0px $blur $spread rgba($color,.8);
+}
+
+@mixin double_shadow($blur, $spread, $color, $blur2, $spread2, $color2) {
+  -webkit-box-shadow: inset 0px 0px $blur $spread rgba($color,.8), 0px 0px $blur2 $spread2 rgba($color2,.8);
+  -moz-box-shadow: inset 0px 0px $blur $spread rgba($color,.8), 0px 0px $blur2 $spread2 rgba($color2,.8);
+  box-shadow: inset 0px 0px $blur $spread rgba($color,.8), 0px 0px $blur2 $spread2 rgba($color2,.8);
 }
 
 @mixin unselectable() {
@@ -12,10 +20,9 @@
   -o-user-select: none;
 }
 
-@mixin unfocusable() {
-  user-focus: none;
-  -moz-user-focus: none;
-  -khtml-user-focus: none;
-  -webkit-user-focus: none;
-  -o-user-focus: none;
+@mixin darkenStyle() {
+  background-color: rgba($color: $color-dark, $alpha: .8);
+  border-style: solid;
+  border-color: rgba($color: $color-primary, $alpha: .8);
+  border-width: 1px;
 }
