--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-
-<router-outlet></router-outlet>
+<div class="scroll-container">
+  <div class="scroll-content">
+    <app-navbar *ngIf="!isErroPage()"></app-navbar>
+    <router-outlet></router-outlet>
+  </div>
+</div>
