--- a/src/scss/material.scss
+++ b/src/scss/material.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import url('//fonts.googleapis.com/icon?family=Material+Icons');
+//@import url('//fonts.googleapis.com/icon?family=Material+Icons');
 
 @include mat-core();
 
