--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,7 +50,7 @@ textarea, select, {
 a {
   color: $color-secondary;
   font-weight: bold;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Raleway', cursive;
 
   &:focus,
 	&:hover {
