--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,12 @@
-<p>
-  dashboard works!
-</p>
+<div class="background">
+  <!-- <div class="menu">
+    <ul>
+      <li>
+        <a>Login</a>
+      </li>
+    </ul>
+  </div> -->
+  <div class="container">
+    sdfsddsf
+  </div>
+</div>
