--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,4 +1,8 @@
-<p>
-  404 not found
-</p>
-<a routerLink="">Take me home</a>
+<div class="background">
+  <h1 class="text-huge">
+    <b>404</b> not found
+  </h1>
+  <h1 class="text-large">
+    <a routerLink="">Take me home</a>
+  </h1>
+</div>
