--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,8 +1,9 @@
 @import "../../scss/mixins";
 
 .navbar {
+  z-index: 1;
   @include darkenStyle();
-  @include box_shadow(15px, 5px, black);
+  @include box_shadow(7px, 1px, black);
   position: fixed;
   padding: 10px;
   width: 100%;
@@ -10,6 +11,22 @@
   text-align: right;
 
   a {
-    font-size: 1.5em;
+    font-size: 1em;
   }
+}
+
+.fabric {
+  //background-image: url("/assets/img/shell.jpg");
+}
+
+.profile-picture {
+  width: 30px;
+  height: 30px;
+  vertical-align: bottom;
+  margin-right: 10px;
+  border-radius: 50%;
+}
+
+.user-control {
+  margin-right: 40px;
 }
