--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -3,7 +3,7 @@
 
 .background {
   width: 100vw;
-  height: 100%;
+  //height: 100%;
   min-height: 100vh;
   background-image: url("/assets/img/swirl.jpg");
 }
@@ -24,7 +24,7 @@
 }
 
 .container {
-  padding-top: 80px;
+  padding: 80px 20px 20px;
   height: 100%;
   width: 100%;
 }
