--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,12 +2,14 @@
   <form (submit)="login()">
     <h1 class="title">Log in</h1>
     <mat-form-field>
-      <input matInput type="text" [(ngModel)]="username" placeholder="Username">
+      <input matInput type="text" [(ngModel)]="username" placeholder="Username" name="username">
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput type="password" [(ngModel)]="password" placeholder="Password">
+      <input matInput type="password" [(ngModel)]="password" placeholder="Password" name="password">
     </mat-form-field>
+
+    <mat-checkbox [(ngModel)]="stayIn" name="stay">Stay Logged in</mat-checkbox>
     <button type="submit">Log in</button>
   </form>
 </div>
