--- a/src/scss/material.scss
+++ b/src/scss/material.scss
@@ -3,8 +3,41 @@
 
 @include mat-core();
 
+$mat-blueish: (
+  50: lighten($color-secondary, 50%),
+  100: lighten($color-secondary, 40%),
+  200: lighten($color-secondary, 30%),
+  300: lighten($color-secondary, 20%),
+  400: lighten($color-secondary, 10%),
+  500: $color-secondary,
+  600: darken($color-secondary, 10%),
+  700: darken($color-secondary, 20%),
+  800: darken($color-secondary, 30%),
+  900: darken($color-secondary, 40%),
+  A100: lighten($color-secondary, 25%),
+  A200: lighten($color-secondary, 20%),
+  A400: lighten($color-secondary, 15%),
+  A700: lighten($color-secondary, 10%),
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $dark-primary-text,
+    400: $dark-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
+  )
+);
+
 $primary: mat-palette($mat-grey, 500);
-$accent:  mat-palette($mat-lime, 500);
+$accent:  mat-palette($mat-blueish, 500);
 $warn:    mat-palette($mat-red, 500);
 
 $theme: mat-dark-theme($primary, $accent, $warn);
