creating registration page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,6 +10,7 @@
     </mat-form-field>
 
     <mat-checkbox [(ngModel)]="stayIn" name="stay">Stay Logged in</mat-checkbox>
+    <p>No account? <a (click)="openRegister()">Register</a></p>
     <button type="submit">Log in</button>
   </form>
 </div>
