implement registration modal

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@
 
 .scroll-content {
   width: calc(100vw + 26px);
-  height: calc(100% + 26px);;
+  height: calc(100% + 26px);
   overflow: auto;
   margin: 0px;
 }
