--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,41 +1,29 @@
-<div class="menu-container">
-  <form (submit)="register()">
-    <h1 class="title">Register</h1>
+<div class="outer-container">
+  <div class="menu-container">
+    <form (submit)="register()">
+      <h1 class="title">Register</h1>
 
-    <div class="row">
-      <div class="column column-50">
-        <mat-form-field>
-          <input matInput type="text" [(ngModel)]="username" placeholder="Username" name="username">
-        </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" [(ngModel)]="username" placeholder="Username" name="username">
+      </mat-form-field>
 
-        <mat-form-field>
-          <input matInput type="password" [(ngModel)]="password" placeholder="Password" name="password">
-        </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" [(ngModel)]="password" placeholder="Password" name="password">
+      </mat-form-field>
 
-        <mat-form-field>
-          <input matInput type="password" [(ngModel)]="password2" placeholder="Repeat password" name="password2">
-        </mat-form-field>
+      <mat-form-field>
+        <input matInput type="password" [(ngModel)]="password2" placeholder="Repeat password" name="password2">
+      </mat-form-field>
 
-        <mat-form-field>
-          <input matInput type="text" [(ngModel)]="nickname" placeholder="Nickname" name="nickname">
-        </mat-form-field>
-      </div>
-      <div class="column column-50">
-        <mat-form-field>
-          <input matInput type="text" [(ngModel)]="firstname" placeholder="Firstname" name="firstname">
-        </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" [(ngModel)]="nickname" placeholder="Nickname" name="nickname">
+      </mat-form-field>
 
-        <mat-form-field>
-          <input matInput type="text" [(ngModel)]="lastname" placeholder="Lastname" name="lastname">
-        </mat-form-field>
+      <mat-form-field>
+        <input matInput type="text" [(ngModel)]="email" placeholder="Email" name="email">
+      </mat-form-field>
 
-        <mat-form-field>
-          <input matInput type="text" [(ngModel)]="email" placeholder="Email" name="email">
-        </mat-form-field>
-      </div>
-    </div>
-
-    <mat-checkbox [(ngModel)]="loveMe" name="love">I love and respect you.</mat-checkbox>
-    <button type="submit">Go on</button>
-  </form>
+      <button type="submit">Go on</button>
+    </form>
+  </div>
 </div>
