--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,5 +1,72 @@
-.container {
-  padding: 80px 20px 20px;
-  height: 100%;
+@import "../../scss/colors";
+
+.mat-divider.mat-divider-vertical {
+  border-right-width: 2px;
+  padding: 10px;
+  margin-right: 10px;
+}
+
+.infos {
+  mat-form-field {
+    width: 20em;
+    display: block;
+  }
+}
+
+input[readonly]
+{
+    color:$color-initial;
+}
+
+input {
+  font-size: 1.4em;
+}
+
+button[type='submit'] {
+  float: left;
+  margin-top: 40px;
+}
+
+.image {
   width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
+.profile-file {
+  text-shadow: 1px 1px 2px black;
+  margin-bottom: -40px;
+  margin-right: 4px;
+  position: relative;
+  overflow: hidden;
+  float: right;
+  clear: left;
+}
+.profile-file input[type="file"] {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  opacity: 0;
+  font-size: 100px;
+  filter: alpha(opacity=0);
+  cursor: pointer;
+}
+
+.box{
+	position: relative;
+	width: 100%;
+}
+.box:before{
+	content: "";
+	display: block;
+	padding-top: 100%;
+}
+.content{
+  overflow: hidden;
+	position:  absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
 }
