--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,9 +4,9 @@
       <fa [name]="'home'" [size]="2"></fa>
       Kero
     </a>
-    <a routerLink="dashboard" class="home-control">
-      <fa [name]="'cogs'" [size]="2"></fa>
-      Dashboard
+    <a routerLink="galery" class="home-control">
+      <fa [name]="'th'" [size]="2"></fa>
+      Events
     </a>
     <a routerLink="user" class="user-control">
       <img class="profile-picture" [src]="user?.picture" /> {{user?.nickname}}
