--- a/src/app/galery/galery.component.html
+++ b/src/app/galery/galery.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-  <app-event *ngFor="let event of events"></app-event>
+  <app-event *ngFor="let event of events" [event]="event"></app-event>
 </div>
