--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="column column-50">
-      <img [src]="event.picture" class="image" />
+      <img [src]="getPreview()" class="image" />
     </div>
     <div class="column column-50">
       <h1>{{event.location}}</h1>
