--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,7 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="column column-50">
-      <img [src]="getPreview()" class="image" />
+      <div class='box'>
+        <div class='content'>
+          <img [src]="getPreview()" />
+        </div>
+      </div>
     </div>
     <div class="column column-50">
       <h1>{{event.location}}</h1>
