--- a/src/app/event/event.component.scss
+++ b/src/app/event/event.component.scss
@@ -1,5 +1,6 @@
 @import "../../scss/colors";
 @import "../../scss/mixins";
+@import "../../scss/boxing";
 
 h1 {
   margin: 0px;
@@ -15,4 +16,10 @@ h1 {
   padding: 10px;
   width: 30em;
   height: 15em;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
 }
