--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,4 +1,5 @@
 @import "../../scss/colors";
+@import "../../scss/boxing";
 
 .mat-divider.mat-divider-vertical {
   border-right-width: 2px;
@@ -27,7 +28,7 @@ button[type='submit'] {
   margin-top: 40px;
 }
 
-.image {
+img {
   width: 100%;
   height: 100%;
   object-fit: fill;
@@ -51,22 +52,4 @@ button[type='submit'] {
   font-size: 100px;
   filter: alpha(opacity=0);
   cursor: pointer;
-}
-
-.box{
-	position: relative;
-	width: 100%;
-}
-.box:before{
-	content: "";
-	display: block;
-	padding-top: 100%;
-}
-.content{
-  overflow: hidden;
-	position:  absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
 }
