--- a/src/app/galery/galery.component.html
+++ b/src/app/galery/galery.component.html
@@ -1,3 +1,10 @@
 <div class="container">
+  <div class="row">
+    <a class="event-add">
+      <fa [name]="'plus-circle'" [size]="3"></fa>
+      <h1>New</h1>
+    </a>
+  </div>
   <app-event *ngFor="let event of events" [event]="event"></app-event>
+  <div *ngFor="let n of count(10)" class="padder"></div>
 </div>
