--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     </a>
   </div>
   <div *ngIf="!isLoggedIn()">
-    <a (click)="openDialog()">
+    <a (click)="openLogin()">
       <fa class="shadow-text" [name]="'sign-in'" [size]="2"></fa>
     </a>
   </div>
