added date input to event vreation

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -6,6 +6,6 @@ $color-primary: #424342 !default;
 $color-secondary: #27695c !default;
 $color-tertiary: #f0a202 !default;
 $color-quaternary: #230903 !default;
-$color-quinary: #f00 !default;
+$color-quinary: #27695c !default;
 
 $color-dark: #111;
