--- a/src/app/event/event-create.component.html
+++ b/src/app/event/event-create.component.html
@@ -1,9 +1,14 @@
 <div class="menu-container">
-    <form (submit)="create()">
-      <h1 class="title">New event</h1>
-      <mat-form-field>
-        <input matInput type="text" [(ngModel)]="title" placeholder="Title" name="title">
-      </mat-form-field>
-      <button type="submit">Create</button>
-    </form>
-  </div>
+  <form (submit)="create()">
+    <h1 class="title">New event</h1>
+    <mat-form-field>
+      <input matInput type="text" [(ngModel)]="title" placeholder="Title" name="title">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker" [(ngModel)]="date" placeholder="Event date" name="date">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <button type="submit">Create</button>
+  </form>
+</div>
