--- a/src/app/event/event-create.component.html
+++ b/src/app/event/event-create.component.html
@@ -5,7 +5,7 @@
       <input matInput type="text" [(ngModel)]="title" placeholder="Title" name="title">
     </mat-form-field>
     <mat-form-field>
-      <input matInput [matDatepicker]="picker" [(ngModel)]="date" placeholder="Event date" name="date">
+      <input show-todays-date matInput [matDatepicker]="picker" [(ngModel)]="date" placeholder="Event date" name="date">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
