--- a/src/app/event/event-create.component.scss
+++ b/src/app/event/event-create.component.scss
@@ -4,7 +4,7 @@
 .menu-container {
   width: 40rem;
   height: 40rem;
-  @include darkenStyle();
+  @include darken_style();
   padding: 40px;
   .title {
     font-size: 4em;
