--- a/src/app/event/event-list.component.scss
+++ b/src/app/event/event-list.component.scss
@@ -1,12 +1,7 @@
+@import "../../scss/mixins";
+
 .container {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 100%;
-  justify-content: space-evenly;
+  @include flex_container();
   padding-bottom: 5em;
   &:after {
     box-sizing: border-box;
