--- a/src/app/event/event-preview.component.html
+++ b/src/app/event/event-preview.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" routerLink="/event">
   <div class="row">
     <div class="column column-50">
       <div class='box'>
