--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -2,7 +2,7 @@
 @import "../../scss/mixins";
 
 .outer-container {
-  @include darkenStyle();
+  @include darken_style();
   width: 30rem;
   height: 70rem;
 }
