--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -20,9 +20,20 @@
   -o-user-select: none;
 }
 
-@mixin darkenStyle() {
+@mixin darken_style() {
   background-color: rgba($color: $color-dark, $alpha: .8);
   border-style: solid;
   border-color: rgba($color: $color-primary, $alpha: .8);
   border-width: 1px;
+}
+
+@mixin flex_container() {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%;
+  justify-content: center;
 }
