--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -3,9 +3,9 @@
 
 $color-initial: #eff9f0 !default;
 $color-primary: #424342 !default;
-$color-secondary: #27695c !default;
-$color-tertiary: #f0a202 !default;
-$color-quaternary: #230903 !default;
+$color-secondary: #37796c !default;
+$color-tertiary: #b02e0c !default;
+$color-quaternary: #f0a202 !default;
 $color-quinary: #27695c !default;
 
 $color-dark: #111;
