--- a/src/app/event/event-view.component.scss
+++ b/src/app/event/event-view.component.scss
@@ -18,7 +18,15 @@ h5 {
 
 .event-edit {
   text-shadow: 1px 1px 5px black;
-  margin: 0px;
+  margin: 2px;
+  padding: 0px;
+  position: relative;
+  float: right;
+}
+
+.event-delete {
+  text-shadow: 1px 1px 5px black;
+  margin-right: 10px;
   padding: 0px;
   position: relative;
   float: right;
