--- a/src/app/event/event-delete.component.html
+++ b/src/app/event/event-delete.component.html
@@ -1,7 +1,7 @@
 <div class="menu-container">
   <form (submit)="delete()">
     <h1 class="title">Delete event</h1>
-    <h3>Are you sure you want to delete the event?</h3>
-    <button type="submit">Delete</button>
+    <h3 class="danger">Are you sure you want to delete the event?</h3>
+    <button class="danger" type="submit">Delete</button>
   </form>
 </div>
