--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,9 @@
       <input matInput type="password" [(ngModel)]="password" placeholder="Password" name="password">
     </mat-form-field>
 
-    <p>No account? <a (click)="openRegister()">Register</a></p>
+    <p>No account?
+      <a (click)="openRegister()">Register</a>
+    </p>
     <button type="submit">Log in</button>
   </form>
 </div>
