added subtle styling to image previews

--- a/src/app/event/event-view.component.html
+++ b/src/app/event/event-view.component.html
@@ -12,7 +12,7 @@
       <p>{{event?.description}}</p>
     </div>
   </div>
-  <div class="container" *ngFor="let preview of imagePreviews; let i = index">
+  <div class="preview-container" *ngFor="let preview of imagePreviews; let i = index">
     <img [src]="getPreview(i)" />
   </div>
 </div>
