--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -36,7 +36,7 @@ img {
 
 .profile-file {
   text-shadow: 1px 1px 2px black;
-  margin-bottom: -40px;
+  margin-top: -40px;
   margin-right: 4px;
   position: relative;
   overflow: hidden;
