--- a/src/app/event/event-view.component.scss
+++ b/src/app/event/event-view.component.scss
@@ -53,10 +53,12 @@ h5 {
 .preview-container {
   @include darken_style();
   @include box_shadow(7px, 1px, black);
+  margin: 0px;
+  padding: 0px;
   margin: 0.5em;
-  padding: 0.2em 0.2em 0em;
-  width: auto;
+  padding: 0.2em;
   cursor: pointer;
+  height: $preview-size + 0.5em;
   
   &:hover {
     background-color: darken($color-secondary, 18%);
@@ -66,6 +68,8 @@ h5 {
   }
 
   img {
+    margin: 0px;
+    padding: 0px;
     width: auto;
     height: $preview-size;
   }
