--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="menu-container">
+<div class="modal-container">
   <form (submit)="login()">
     <h1 class="title">Log in</h1>
     <mat-form-field>
