--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,6 @@
-@import "../../scss/colors";
 @import "../../scss/mixins";
 
-.menu-container {
+.modal-container {
   width: 30rem;
   height: 47rem;
   @include darken_style();
