--- a/src/app/event/event-edit.component.html
+++ b/src/app/event/event-edit.component.html
@@ -1,4 +1,4 @@
-<div class="menu-container">
+<div class="modal-container">
   <form (submit)="save()">
     <h1 class="title">Edit event</h1>
     <mat-form-field>
