--- a/src/app/image/image-view.component.html
+++ b/src/app/image/image-view.component.html
@@ -2,6 +2,9 @@
   <a (click)="close()">
     <fa class="exit-button" [name]="'times'" [size]="3"></fa>
   </a>
+  <a (click)="openDelete()" class="image-delete danger">
+    <fa [name]="'trash'" [size]="3"></fa>
+  </a>
   <div class="image-container">
     <a>
       <fa class="navigation-button" [name]="'chevron-left'" [size]="3" (click)="left()"></fa>
