--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="outer-container">
-  <div class="menu-container">
+  <div class="modal-container">
     <form (submit)="register()">
       <h1 class="title">Register</h1>
 
