--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -7,7 +7,7 @@
   height: 68rem;
 }
 
-.menu-container {
+.modal-container {
   padding: 40px;
   .title {
     font-size: 4em;
@@ -30,7 +30,7 @@
     overflow: hidden;
   }
 
-  .menu-container {
+  .modal-container {
     width: calc(30rem);
     height: calc(100%);
     overflow: auto;
