--- a/src/app/event/event-edit.component.scss
+++ b/src/app/event/event-edit.component.scss
@@ -1,7 +1,7 @@
 @import "../../scss/colors";
 @import "../../scss/mixins";
 
-.menu-container {
+.modal-container {
   width: 40rem;
   height: 58rem;
   @include darken_style();
