--- a/src/app/image/image-delete.component.html
+++ b/src/app/image/image-delete.component.html
@@ -1,7 +1,7 @@
 <div class="modal-container">
   <form (submit)="delete()">
-    <h1 class="title">Delete event</h1>
-    <h3 class="danger">Are you sure you want to delete the event?</h3>
+    <h1 class="title">Delete image</h1>
+    <h3 class="danger">Are you sure you want to delete the image?</h3>
     <button class="danger" type="submit">Delete</button>
   </form>
 </div>
