added user list page

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <div class="navbar" [ngClass]="{'darkbar': isLoggedIn()}">
   <div *ngIf="isLoggedIn()">
-    <a routerLink="galery" class="home-control">
+    <a routerLink="galery" class="action-control">
       <fa [name]="'th'" [size]="2"></fa>
+    </a>
+    <a routerLink="user/list" class="action-control">
+      <fa [name]="'users'" [size]="2"></fa>
     </a>
     <a routerLink="user" class="user-control">
       <img class="profile-picture" [src]="user?.picture" /> {{user?.nickname}}
