--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -6,6 +6,7 @@
   padding: 10px;
   width: 100%;
   text-align: right;
+  padding-left: 2em;
 
   a {
     font-size: 1em;
@@ -24,7 +25,7 @@
   margin-right: 40px;
 }
 
-.home-control {
+.action-control {
   margin-right: 40px;
   float: left;
   vertical-align: bottom;
