implement user invite

--- a/src/app/user/user-list.component.html
+++ b/src/app/user/user-list.component.html
@@ -1,4 +1,10 @@
 <div class="container">
+  <div class="row">
+    <a (click)="openInvite()" class="user-invite">
+      <fa [name]="'user-plus'" [size]="3"></fa>
+      <h1>Invtie</h1>
+    </a>
+  </div>
   <table>
     <tr class="table-header">
       <th class="image-cell"></th>
