--- a/src/app/user/user-list.component.scss
+++ b/src/app/user/user-list.component.scss
@@ -35,3 +35,21 @@
 .user-delete {
   text-shadow: 1px 1px 3px black;
 }
+
+.user-invite {
+  text-shadow: 1px 1px 5px black;
+  margin: 0px;
+  padding: 0px;
+  h1 {
+    margin: 0px;
+    display: block;
+    font-weight: bold;
+    font-size: 1.3em;
+  }
+}
+
+.row {
+  align-items: center;
+  justify-content: center;
+  margin: 2em;
+}
