--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,11 +2,11 @@
   <form (submit)="login()">
     <h1 class="title">Log in</h1>
     <mat-form-field>
-      <input matInput type="text" [(ngModel)]="username" placeholder="Username" name="username">
+      <input matInput type="text" [(ngModel)]="credentials.username" placeholder="Username" name="username">
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput type="password" [(ngModel)]="password" placeholder="Password" name="password">
+      <input matInput type="password" [(ngModel)]="credentials.password" placeholder="Password" name="password">
     </mat-form-field>
 
     <p>No account?
